fixed project card sizing and spacing issue

--- a/Andrew-Marks-Portfolio-Website/css/style.css
+++ b/Andrew-Marks-Portfolio-Website/css/style.css
@@ -1,43 +1,4 @@
 
-/*
-///////////////////////////////////////
-UI/UX Projects
-///////////////////////////////////////
-*************************************
-small screens
-*************************************
-*/
-
-@media (max-width: 800px) {
-    .projects--ds-container {
-        margin: 100px 7vw 40px 7vw;
-        background-color: var(--clr-white);
-        border-radius: 40px;
-        padding: 40px;
-        width: 86vw;
-        box-shadow: var(--bs);
-    }
-}
-
-
-/*************************************
-large screens
-************************************/
-@media (min-width: 800px) {
-    .projects--ds-container {
-        margin: 140px 7vw 40px 7vw;
-        background-color: var(--clr-white);
-        border-radius: 40px;
-        padding: 40px;
-        width: 86vw;
-        box-shadow: var(--bs);
-    }
-
-    .projects--ds-container {
-        margin-top: 60px;
-        margin-bottom: 100px;
-    }
-}
 
 
 /*
